chore: correções e adições
