# storage/api-docs/api-docs.json
@@ -33,7 +33,9 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "default": 1
+                            "format": "int64",
+                            "default": 1,
+                            "minimum": 1
                         }
                     },
                     {
@@ -42,7 +44,9 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "default": 15
+                            "format": "int64",
+                            "default": 15,
+                            "minimum": 1
                         }
                     },
                     {
@@ -54,11 +58,23 @@
                         }
                     },
                     {
+                        "name": "creationDate",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "format": "date"
+                        }
+                    },
+                    {
                         "name": "archived",
                         "in": "query",
                         "required": false,
                         "schema": {
-                            "type": "integer"
+                            "type": "integer",
+                            "format": "int64",
+                            "maximum": 1,
+                            "minimum": 0
                         }
                     },
                     {
@@ -66,7 +82,44 @@
                         "in": "query",
                         "required": false,
                         "schema": {
-                            "type": "integer"
+                            "type": "integer",
+                            "format": "int64",
+                            "maximum": 1,
+                            "minimum": 0
+                        }
+                    },
+                    {
+                        "name": "sortBy",
+                        "in": "query",
+                        "required": false,
+                        "explode": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string",
+                                "enum": [
+                                    "id",
+                                    "title"
+                                ]
+                            },
+                            "default": "id"
+                        }
+                    },
+                    {
+                        "name": "orderBy",
+                        "in": "query",
+                        "required": false,
+                        "explode": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string",
+                                "enum": [
+                                    "asc",
+                                    "desc"
+                                ]
+                            },
+                            "default": "asc"
                         }
                     }
                 ],
@@ -109,7 +162,9 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "default": 1
+                            "format": "int64",
+                            "default": 1,
+                            "minimum": 1
                         }
                     }
                 ],
@@ -204,7 +259,9 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "default": 1
+                            "format": "int64",
+                            "default": 1,
+                            "minimum": 1
                         }
                     }
                 ],
@@ -277,7 +334,9 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "default": 1
+                            "format": "int64",
+                            "default": 1,
+                            "minimum": 1
                         }
                     }
                 ],
